--- a/src/components/Categorybar/Categorybar.scss
+++ b/src/components/Categorybar/Categorybar.scss
@@ -1,44 +1,127 @@
 @import '../../styles/common.scss';
 
 
-wt-chips {
-    position: fixed;
-    width: 85.3972%;
-    height: 56px;
-    background-color: var(--main-bg);
-    margin: 60px 0 0 250px;
-    z-index: 100;
+// wt-chips {
+//     position: fixed;
+//     width: 85.3972%;
+//     height: 56px;
+//     background-color: var(--main-bg);
+//     margin: 60px 0 0 250px;
+//     z-index: 100;
 
-    #container {
-        width: 70%;
-        height: 56px;
-    }
+//     #container {
+//         width: 70%;
+//         height: 56px;
+//     }
 
+// }
+
+// wt-chips-wrapper {
+//     white-space: nowrap;
+//     font-size: 0.8rem;
+//     margin: 8px;
+//     height: 32px;
+//     padding: 0 15px;
+//     border-radius: 8px;
+//     overflow: hidden;
+//     cursor: pointer;
+//     background: var(--category-bt-bg);
+//     color: var(--text-primary);
+
+//     .wt-chips-wrapper {
+//         max-width: 20rem;
+//         display: block;
+//         text-overflow: ellipsis;
+//         overflow: hidden;
+//         white-space: nowrap;
+//     }
+// }
+
+// .wt-chips {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
+
+
+#header.wt-grid-renderer {
+    width: 100%;
+    display: flex;
 }
 
-wt-chips-wrapper {
+wt-chip-bar {
+    --wt-grid-chip-bar-width: 100%;
+    --wt-grid-chip-bar-top: 56px;
+    width: 100%;
+    height: 56px;
+    display: flex;
+}
+
+#chips-wrapper.wt-chip-bar {
+    background-color: var(--main-bg);
+    border-top: none;
+    border-bottom: none;
+    position: fixed;
+    top: var(--wt-grid-chip-bar-top);
+    width: var(--wt-grid-chip-bar-width);
+    display: flex;
+    justify-content: flex-start;
+    flex: none;
+}
+
+#scroll-container.wt-chip-bar {
+    position: relative;
     white-space: nowrap;
-    font-size: 0.8rem;
-    margin: 8px;
+    overflow: hidden;
+}
+
+wt-chip.wt-chip-bar:first-of-type {
+    margin-left: 24px;
+}
+
+wt-chip {
     height: 32px;
-    padding: 0 15px;
-    border-radius: 8px;
+    min-width: 12px;
+    padding: 0 10px;
+    border-radius: 16px;
+    box-sizing: border-box;
+    outline: none;
     overflow: hidden;
     cursor: pointer;
-    background: var(--category-bt-bg);
-    color: var(--text-primary);
-
-    .wt-chips-wrapper {
-        max-width: 20rem;
-        display: block;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-    }
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    display: inline-flex;
+    font-size: 0.8rem;
+    font-weight: var(--wt-user-comment-font-weight);
+    line-height: var(--wt-user-comment-line-height);
 }
 
-.wt-chips {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+wt-chip {
+    border-radius: 8px;
+    border: none;
+    background-color: var(--white-alpha-10);
+    color: var(--text-primary);
+}
+
+wt-chip[selected] {
+    background-color: var(--text-primary);
+    color: var(--text-primary-inverse);
+}
+
+wt-chip.wt-chip-bar {
+    margin: 12px;
+    margin-left: 0;
+    padding: 0 var(--wt-margin-3x);
+}
+
+#text.wt-chip {
+    max-width: 20rem;
+}
+
+wt-formatted-string {
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
