--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -134,3 +134,11 @@
         }
     }
 }
+
+
+wt-grid-renderer{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
