--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -14,19 +14,19 @@
     padding-top: 24px;
 }
 
-.content_grid_container{
+.content_grid_container {
     width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 
-.content_grid_row_container{
+.content_grid_row_container {
     width: 100%;
     display: flex;
 }
 
-.content_grid_row_item_container{
+.content_grid_row_item_container {
     margin: 0 8px 40px 8px;
     width: 350px;
     width: calc(100% / 4 - 16px - 0.01px);
@@ -136,9 +136,74 @@
 }
 
 
-wt-grid-renderer{
+wt-grid-row #contents.wt-grid-row {
+    width: 100%;
+    max-width: calc(var(--wt-grid-item-row) * (var(--wt-grid-item-max-width) + var(--wt-grid-item-margin)));
+    margin: 0 16px;
+    display: flex;
+}
+
+#contents.wt-grid-render {
+    width: 100%;
+    padding-top: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+#content.wt-item-render {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#dismissible.wt-grid-media{
     position: relative;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+wtd-thumbnail.wt-grid-media{
+    width: 100%;
+    position: relative;
+}
+
+wtd-thumbnail #thumbnail.wtd-thumbnail{
+    // position: absolute;
+    // top: 0;
+    // right: 0;
+    // bottom: 0;
+    // left: 0;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    display: block;
+}
+
+wtd-thumbnail a.wtd-thumbnail{
+    border-radius: 12px;
+}
+
+wt-image img.wtd-thumbnail{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+wtd-thumbnail-overlay-progress-render{
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: 4px;
+    background-color: var(--wt-text-disabled);
+    z-index: 1;
+}
+
+#progress.wtd-thumbnail-overlay-progress-render{
+    background-color: var(--wt-theme-red);
+    height: 100%;
 }
