Style: z-index 수정

--- a/src/App.css
+++ b/src/App.css
@@ -440,7 +440,7 @@ wtd-video-meta-block {
 }
 
 wtd-channel-name {
-  z-index: 300;
+  /* z-index: 300; */
   display: flex;
   align-self: flex-start;
 }
