--- a/src/App.css
+++ b/src/App.css
@@ -444,3 +444,27 @@ wtd-channel-name {
   display: flex;
   align-self: flex-start;
 }
+
+wt-button-render {
+  --paper-button-ink-color: var(--wt-icon-inactive);
+  --yt-formatted-string-deemphasize-color: var(--static-brand-white);
+  vertical-align: middle;
+  white-space: nowrap;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
+
+wt-button-shape{
+  display: flex;
+  flex: 1;
+  flex-basis: 1e-9px;
+}
+
+wt-icon{
+  display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    vertical-align: middle;
+}
