--- a/src/components/Detail/Detail2.scss
+++ b/src/components/Detail/Detail2.scss
@@ -86,6 +86,8 @@ wtd-player,
     object-fit: cover;
 }
 
+//****비디오 컨트롤
+
 .video-control {
     bottom: 0;
     height: 48px;
@@ -154,17 +156,241 @@ wtd-player,
     transform-origin: 0 0;
 }
 
-.wt-swatch-background-color{
+.wt-swatch-background-color {
     background-color: #f00;
 }
 
-.wt-progress-linear-live-buffer{
+.wt-progress-linear-live-buffer {
     z-index: 45;
     background: #c00;
     opacity: 0;
 }
 
-.wt-load-progress{
+.wt-load-progress {
     z-index: 33;
-    background: rgba(255,255,255,0.4);
+    background: rgba(255, 255, 255, 0.4);
+}
+
+.wt-scrubber-container {
+    position: absolute;
+    top: -4px;
+    left: -6.5px;
+    z-index: 43;
+}
+
+.wt-scrubber-button {
+    height: 13px;
+    width: 13px;
+    border-radius: 6.5px;
+    transition: transform .1s cubic-bezier(0.4, 0, 1, 1), -webkit-transform .1s cubic-bezier(0.4, 0, 1, 1);
+}
+
+.wt-scrubber-pull-indicator {
+    position: absolute;
+    z-index: 42;
+    bottom: 16.9px;
+    left: 6.5px;
+    transform: rotate(45deg);
+}
+
+.wt-controls {
+    display: flex;
+    height: 48px;
+    line-height: 48px;
+    font-size: 109%;
+    text-align: left;
+}
+
+.wt-left-controls {
+    display: flex;
+    flex: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    float: left;
+    height: 100%;
+}
+
+.wt-right-controls {
+    display: flex;
+    flex: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    float: right;
+    height: 100%;
+}
+
+.wt-button {
+    cursor: pointer;
+    width: 46px;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    z-index: 50;
+}
+
+.wt-control-time {
+    display: flex;
+    align-items: center;
+    color: var(--player-control-time-text);
+    font-size: 15px;
+    z-index: 50;
+}
+
+.wt-control-sound-container {
+    display: flex;
+    align-items: center;
+}
+
+.wt-control-sound-toggle-container {
+    z-index: 50;
+}
+
+.wt-control-sound-toggle-range {
+    width: 100px;
+    outline: none;
+    border: none;
+    background: transparent;
+}
+
+//******비디오 컨트롤
+
+#below.wtd-watch-flexy {
+    position: relative;
+}
+
+wtd-watch-metadata.wtd-watch-flexy {
+    margin-top: var(--wt-margin-3x);
+    margin-bottom: var(--wt-margin-6x);
+}
+
+h1.wtd-watch-metadata {
+    word-break: break-word;
+    font-family: "YouTube Sans", "Roboto", sans-serif;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    font-weight: 600;
+    overflow: hidden;
+    max-height: 5.6rem;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    white-space: normal;
+}
+
+#top-row.wtd-watch-metadata {
+    margin-top: -4px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+#owner.wtd-watch-metadata {
+    min-width: calc(50% - 6px);
+    flex: 1;
+    flex-basis: 1e-9px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.item.wtd-watch-metadata {
+    box-sizing: border-box;
+    margin-right: 12px;
+    margin-top: 12px;
+}
+
+a.wtd-video-owner-render {
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--text-primary);
+}
+
+#profile.wtd-video-owner-render {
+    margin-right: 12px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: transparent;
+    overflow: hidden;
+    opacity: 1;
+    transition: none;
+}
+
+#upload-info.wtd-video-owner-render {
+    margin-right: 24px;
+    overflow: hidden;
+    flex: 1;
+    flex-basis: 1e-9px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#channel-name.wtd-video-owner-render {
+    font-family: "Roboto", "Arial", sans-serif;
+    font-size: 1.1rem;
+    font-weight: 500;
+    max-width: 100%;
+    color: var(--text-primary);
+    display: flex;
+    flex-direction: row;
+}
+
+#owner-sub-count.wtd-video-owner-render {
+    font-family: "Roboto", "Arial", sans-serif;
+    font-size: 0.9rem;
+    font-weight: 400;
+    overflow: hidden;
+    max-height: 1.8rem;
+    -webkit-line-clamp: 1;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    white-space: normal;
+    color: var(--text-secondary);
+    margin-right: 4px;
+}
+
+wt-button-shape.wtd-subscribe-button-render {
+    max-width: 100%;
+    flex: none;
+}
+
+.wt-button-shape-next {
+    color: var(--text-primary-inverse);
+    background-color: var(--text-primary);
+    position: relative;
+    margin: 0;
+    white-space: nowrap;
+    min-width: 0;
+    text-transform: none;
+    font-family: "Roboto", "Arial", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 36px;
+    border-radius: 18px;
+    height: 36px;
+    padding: 0 16px;
+    border: none;
+    cursor: pointer;
+    outline-width: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    flex: 1;
+    flex-basis: 1e-9px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.cbox.wt-button-shape {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
