--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,9 @@ wt-dialog {
   --wt-general-background-b: #161616;
   --wt-general-background-c: #0d0d0d;
 
+  --wt-listbox-background-color: #282828;
+  --wt-listbox-color: #f1f1f1;
+
   --icon-standard-length: 24px;
   --icon-standard-padding: 8px;
   --icon-compact-length: 20px;
@@ -311,6 +314,10 @@ wt-dialog {
 
   --wt-font-caption1-baseline-top: 12px;
   --wt-font-subheading-baseline-bottom: 7px;
+
+  --wt-subheadline-font-size: 1.6rem;
+  --wt-subheadline-font-weight: 400;
+  --wt-subheadline-line-height: 2.2rem;
 
   --wt-thumbnails-border-radius: 2px;
 
@@ -527,7 +534,7 @@ wt-icon {
   vertical-align: middle;
 }
 
-wt-animated-icon{
+wt-animated-icon {
   width: 100%;
   height: 100%;
   display: flex;
@@ -535,7 +542,7 @@ wt-animated-icon{
   justify-content: center;
 }
 
-wtd-button-render{
+wtd-button-render {
   --paper-button-ink-color: var(--icon-disabled);
   --wt-formatted-string-deemphasize-color: var(--static-brand-white);
   vertical-align: middle;
@@ -544,4 +551,78 @@ wtd-button-render{
   font-weight: var(--wt-tab-system-font-weight);
   letter-spacing: var(--wt-tab-system-letter-spacing);
   text-transform: var(--wt-tab-system-text-transform);
+}
+
+wtd-text-inline-expander {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  contain: content;
+  color: var(--text-primary);
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+  font-weight: 400;
+}
+
+wtd-comments {
+  display: block;
+}
+
+wtd-comments-header {
+  --paper-input-container-input-align: baseline;
+  margin-top: 24px;
+  margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+}
+
+wt-dropdown-menu {
+  --paper-menu-button-content-border-radius: 8px;
+  display: inline-block;
+  max-width: 100%;
+}
+
+wt-menu-button {
+  display: inline-block;
+  position: relative;
+  outline: none;
+}
+
+wt-paper-button{
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  background: transparent;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+wt-listbox{
+  display: block;
+  padding: 8px 0;
+  background: var(--wt-listbox-background-color);
+  color: var(--wt-listbox-color);
+}
+
+wt-paper-item{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-family: "Roboto", "Noto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  min-height: 48px;
+  position: relative;
+  padding: 0 16px;
+}
+
+wt-paper-item-body{
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
