--- a/src/components/Detail/Detail2.scss
+++ b/src/components/Detail/Detail2.scss
@@ -476,3 +476,64 @@ wtd-button-render.wtd-menu-render {
     }
 }
 
+wt-button-shape.wtd-menu-render {
+    margin-left: 8px;
+    flex: none;
+}
+
+.wt-button-shape-next.more-button {
+    color: var(--text-primary);
+    background-color: var(--white-alpha-10);
+    width: 36px;
+    padding: 0;
+
+    &:hover {
+        background-color: var(--white-alpha-20);
+    }
+}
+
+.more-button .wt-button-shape-next-icon {
+    margin: 0;
+}
+
+#bottom-row.wtd-watch-metadata {
+    margin-top: 0px;
+    margin-right: -12px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#description.wtd-watch-metadata {
+    cursor: pointer;
+    position: relative;
+    border-radius: 12px;
+    background: var(--white-alpha-10);
+    --wt-text-inline-expander-button-color: var(--text-primary);
+    flex: 1;
+    flex-basis: 1e-9px;
+    font-family: "Roboto","Arial",sans-serif;
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+    font-weight: 400;
+}
+
+#description-inner.wtd-watch-metadata{
+    margin: 12px;
+}
+
+#info-container.wtd-watch-metadata{
+    overflow: hidden;
+}
+
+#info.wtd-watch-metadata{
+    white-space: pre;
+}
+
+#snippet.wtd-text-inline-expander{
+    white-space: pre-wrap;
+}
+
+.wt-attributed-string{
+    white-space: pre-wrap;
+}
