--- a/src/components/Detail/Comment.scss
+++ b/src/components/Detail/Comment.scss
@@ -105,3 +105,87 @@ wt-paper-item-body.wt-dropdown-menu {
     font-weight: var(--wt-user-comment-font-weight);
     line-height: var(--wt-user-comment-line-height);
 }
+
+#author-thumbnail.wtd-comment-simplebox-render {
+    width: 40px;
+    height: 40px;
+    margin-right: 16px;
+    flex: none;
+    border-radius: 50%;
+    background-color: transparent;
+    overflow: hidden;
+    opacity: 1;
+    transition: none;
+}
+
+#placeholder-area.wtd-comment-simplebox-render {
+    cursor: text;
+    padding-bottom: 4px;
+    // border-bottom: 1px solid var(--white-alpha-10);
+    flex: 1;
+    flex-basis: 1e-9px;
+}
+
+#input-box.wtd-comment-simplebox-render {
+    padding-bottom: 8px;
+
+    input {
+        width: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        height: 24px;
+        border-bottom: 1px solid var(--comment-bt-text-disabled);
+        color: var(--text-primary);
+
+        &:focus {
+            border-bottom: 1px solid var(--bg-primary);
+        }
+    }
+
+    input::placeholder {
+        color: rgb(128, 128, 128);
+        font-size: 14px;
+    }
+}
+
+#footer.wtd-comment-simplebox-render {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+#buttons.wtd-comment-simplebox-render {
+    display: flex;
+    flex-direction: row;
+}
+
+#cancel-button.wtd-comment-simplebox-render,
+#submit-button.wtd-comment-simplebox-render {
+    margin-left: 8px;
+}
+
+wtd-button-render.wtd-comment-simplebox-render {
+    --wt-button-icon-size: 36px;
+    display: inline-block;
+}
+
+.wt-button-shape-next.cancel-button {
+    color: var(--text-primary);
+    background: transparent;
+
+    &:hover{
+        background: var(--white-alpha-10);
+    }
+}
+
+.wt-button-shape-next.submit-button {
+    color: var(--wt-text-disabled);
+    background-color: var(--white-alpha-10);
+
+    &:hover{
+        color: var(--text-primary-inverse);
+        background-color: var(--bg-sub-blue);
+    }
+}
