--- a/src/components/Detail/CommentContent.scss
+++ b/src/components/Detail/CommentContent.scss
@@ -121,3 +121,149 @@ wt-paper-button.wtd-expander {
     font-weight: 500;
     font-family: "Roboto", "Arial", sans-serif;
 }
+
+#action-buttons.wtd-comment-render {
+    margin-top: 4px;
+}
+
+#toolbar.wtd-comment-action-button-render {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+}
+
+#like-button.wtd-comment-action-button-render {
+    margin-left: -8px;
+    --wt-button-icon-size: var(--wt-comment-thumb-dimension);
+    text-transform: uppercase;
+    font-family: "Roboto", "Arial", sans-serif;
+    font-size: 0.8rem;
+    line-height: 1.4rem;
+    font-weight: 500;
+}
+
+.wt-button-shape-next.good-button {
+    color: var(--text-primary);
+    background: transparent;
+    width: 32px;
+    padding: 0;
+
+    &:hover {
+        background: var(--white-alpha-10);
+    }
+
+    .wt-button-shape-next-icon {
+        margin: 0;
+    }
+}
+
+#vote-count.wtd-comment-action-button-render {
+    display: inline-block;
+    margin-right: 8px;
+    font-family: "Roboto", "Arial", sans-serif;
+    font-size: 0.8rem;
+    line-height: 1.4rem;
+    font-weight: 400;
+}
+
+.wt-button-shape-next.bad-button {
+    color: var(--text-primary);
+    background: transparent;
+    width: 32px;
+    padding: 0;
+
+    &:hover {
+        background: var(--white-alpha-10);
+    }
+
+    .wt-button-shape-next-icon {
+        margin: 0;
+    }
+}
+
+wtd-button-render.wtd-comment-action-button-render{
+    margin-left: 8px;
+    display: inline-block;
+    --wt-button-padding: 8px 16px;
+    color: var(--text-secondary);
+    text-transform: uppercase;
+    font-family: "Roboto","Arial",sans-serif;
+    font-size: 0.8rem;
+    line-height: 1.4rem;
+    font-weight: 500;
+}
+
+.wt-button-shape-next.reply-button{
+    color: var(--text-primary);
+    background: transparent;
+    font-size: 12px;
+    padding: 0 12px;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 16px;
+
+    &:hover{
+        background: var(--white-alpha-10);
+    }
+}
+
+#replybox.wtd-comment-action-button-render{
+    padding-top: 4px;
+}
+
+#thumbnail-input-row.wtd-commentbox{
+    word-break: break-all;
+    display: flex;
+    flex-direction: row;
+}
+
+#author-thumbnail.wtd-commentbox{
+    width: 24px;
+    height: 24px;
+    margin-right: 16px;
+    flex: none;
+    border-radius: 50%;
+    background-color: transparent;
+    overflow: hidden;
+    opacity: 1;
+    transition: none;
+}
+
+#button.wtd-menu-render{
+    --wt-button-icon-width: 24px;
+    --wt-button-icon-height: 24px;
+    width: var(--wt-icon-width);
+    height: var(--wt-icon-height);
+}
+
+button.wtd-icon-button{
+    vertical-align: middle;
+    color: inherit;
+    outline: none;
+    background: none;
+    margin: 0;
+    border: none;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    line-height: 0;
+    cursor: pointer;
+}
+
+#expander.wtd-comment-replies-render{
+    display: block;
+    text-transform: none;
+    font-family: "Roboto","Arial",sans-serif;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.more-button.wtd-comment-replies-render{
+    display: inline-flex;
+    align-items: center;
+}
+
+.wt-button-shape-next.reply-more-button{
+    margin-left: -10px;
+    color: var(--text-sub-blue);
+}
