--- a/src/components/Detail/Detail2.scss
+++ b/src/components/Detail/Detail2.scss
@@ -27,6 +27,8 @@ wtd-watch-flexy.wtd-page-manager {
     margin: 0 auto;
     display: flex;
     flex-direction: row;
+    padding-top: 60px;
+    padding-bottom: 100px;
 }
 
 #primary.wtd-watch-flexy {
