--- a/src/components/Sidebar/Sidebar2.scss
+++ b/src/components/Sidebar/Sidebar2.scss
@@ -58,6 +58,7 @@ wt-paper-item.wtd-guide-entry-render {
     min-width: 0;
     height: var(--paper-item-min-height, 48px);
     width: 100%;
+    min-height: 40px;
 }
 
 .guide-icon.wtd-guide-entry-render {
@@ -76,7 +77,7 @@ wt-paper-item.wtd-guide-entry-render {
     white-space: nowrap;
     text-overflow: ellipsis;
     font-family: "Roboto","Arial",sans-serif;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 400;
     flex: 1;
     flex-basis: 1e-9px;
