--- a/src/components/Detail/Detail2.scss
+++ b/src/components/Detail/Detail2.scss
@@ -35,10 +35,10 @@ wtd-watch-flexy.wtd-page-manager {
     max-width: var(--wt-watch-flexy-max-player-width);
     min-width: var(--wt-watch-flexy-min-player-width);
     padding-top: var(--wt-margin-6x);
-    margin-left: var(--ytd-margin-6x);
+    margin-left: var(--wt-margin-6x);
     flex: 1;
     flex-basis: 1e-9px;
-    padding-right: var(--ytd-margin-6x);
+    padding-right: var(--wt-margin-6x);
 }
 
 #player.wtd-watch-flexy {
