Refactor: layout name change

--- a/src/components/Detail/Detail2.scss
+++ b/src/components/Detail/Detail2.scss
@@ -223,7 +223,7 @@ wtd-player,
     height: 100%;
 }
 
-.wt-button {
+.wt-control-button{
     cursor: pointer;
     width: 46px;
     height: 100%;
